Use Java 17 in Source Code and target Java 8 for backwards compatibility